    (Ashish Thusoo via dhruba)

  IMPROVEMENTS

    HIVE-95. Improve cli error messages by lowering backtracking to 1.
    (Pete Wyckoff through zshao)

    HIVE-102. Refactor DDLTask. (Johan Oskarsson through zshao)

    HIVE-85. New compression options for Hive. (Joydeep Sarma through zshao)

    HIVE-69. genMapRedTasks uses tree walker. (Namit through zshao)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-144. Hive/ql java source copied to build/ql/java to make it work 
    with eclipse. (Johan Oskarsson via zshao)

    HIVE-129. Fix aux.jar packaging to work properly with 0.17 and 0.18 
    versions of hadoop. (Joydeep Sarma via zshao)

    HIVE-162. Fix join0.q test failure with hadoop 0.17. (zshao)

    HIVE-146. Fix builds for non-default build directory.
    (David Phillips through zshao)

    HIVE-47. CLI to support multiline queries from an input file.
    (Ashish through zshao)

    HIVE-103. Disable inserts in sub queries. (Namit Jain through zshao)

    HIVE-92. Fixed union all for non-embedded query. (Namit Jain through zshao)

    HIVE-93. Dynamic serde to handle _-prefixed column names in DDL.
    (Pete Wyckoff through zshao)

    HIVE-127. Fetch Task to pass the jobconf to SerDe. (Namit through zshao)

    HIVE-116. Let test depend on deploy. (Johan Oskarsson through zshao)

    HIVE-90. Fixed TestGetDBs for File.list() order.
    (Johan Oskarsson through zshao)

    HIVE-111. Support join without a ON clause. (Namit through zshao)

    HIVE-77. Thread safe query execution. (Joydeep through zshao)

    HIVE-86. Drop table should not delete data for external tables.
    (Johan Oskarsson through zshao)

    HIVE-108. Sampling to use internal column name. (Namit through zshao)

    HIVE-60. Fix the build scripts for the new hive tree.
    (Ashish through zshao)

    HIVE-54. Create this file to record the patches going into a 
    particular release. (dhruba)

    HIVE-12. Improve README for Hive.
    (Ashish Thusoo via dhruba)
